// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`email fixture 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": "my-user@email.com",
        "type": "PASSWORD_STRENGTH_PASSWORD_CHANGED",
      },
    ],
  ],
  "state": Object {
    "passwordStrength": Object {
      "password": "my-user@email.com",
      "passwordConfirmation": "",
    },
  },
}
`;

exports[`initial state 1`] = `
Object {
  "passwordStrength": Object {
    "password": "",
    "passwordConfirmation": "",
  },
}
`;

exports[`mached password confirmation 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": "|Kkh)Xeu#T8($\\"P;",
        "type": "PASSWORD_STRENGTH_PASSWROD_CONFIRMATION_CHANGED",
      },
    ],
  ],
  "state": Object {
    "passwordStrength": Object {
      "password": "|Kkh)Xeu#T8($\\"P;",
      "passwordConfirmation": "|Kkh)Xeu#T8($\\"P;",
    },
  },
}
`;

exports[`medium fixture 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": "qwedsa",
        "type": "PASSWORD_STRENGTH_PASSWORD_CHANGED",
      },
    ],
  ],
  "state": Object {
    "passwordStrength": Object {
      "password": "qwedsa",
      "passwordConfirmation": "",
    },
  },
}
`;

exports[`normal fixture 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": "QwedsaZx",
        "type": "PASSWORD_STRENGTH_PASSWORD_CHANGED",
      },
    ],
  ],
  "state": Object {
    "passwordStrength": Object {
      "password": "QwedsaZx",
      "passwordConfirmation": "",
    },
  },
}
`;

exports[`strong fixture 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": "StrongP@$w0rd",
        "type": "PASSWORD_STRENGTH_PASSWORD_CHANGED",
      },
    ],
  ],
  "state": Object {
    "passwordStrength": Object {
      "password": "StrongP@$w0rd",
      "passwordConfirmation": "",
    },
  },
}
`;

exports[`tooShort fixture 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": "12345",
        "type": "PASSWORD_STRENGTH_PASSWORD_CHANGED",
      },
    ],
  ],
  "state": Object {
    "passwordStrength": Object {
      "password": "12345",
      "passwordConfirmation": "",
    },
  },
}
`;

exports[`unmached password confirmation 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": "StrongP@$w0rd",
        "type": "PASSWORD_STRENGTH_PASSWROD_CONFIRMATION_CHANGED",
      },
    ],
  ],
  "state": Object {
    "passwordStrength": Object {
      "password": "|Kkh)Xeu#T8($\\"P;",
      "passwordConfirmation": "StrongP@$w0rd",
    },
  },
}
`;

exports[`username fixture 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": "my-user-name",
        "type": "PASSWORD_STRENGTH_PASSWORD_CHANGED",
      },
    ],
  ],
  "state": Object {
    "passwordStrength": Object {
      "password": "my-user-name",
      "passwordConfirmation": "",
    },
  },
}
`;

exports[`veryStrong fixture 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": "|Kkh)Xeu#T8($\\"P;",
        "type": "PASSWORD_STRENGTH_PASSWORD_CHANGED",
      },
    ],
  ],
  "state": Object {
    "passwordStrength": Object {
      "password": "|Kkh)Xeu#T8($\\"P;",
      "passwordConfirmation": "",
    },
  },
}
`;

exports[`weak fixture 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": "123456",
        "type": "PASSWORD_STRENGTH_PASSWORD_CHANGED",
      },
    ],
  ],
  "state": Object {
    "passwordStrength": Object {
      "password": "123456",
      "passwordConfirmation": "",
    },
  },
}
`;
